[gd_scene load_steps=11 format=3 uid="uid://crnmvpwdkby13"]

[ext_resource type="Script" path="res://Script/enemy_spawn.gd" id="1_ejpar"]
[ext_resource type="Texture2D" uid="uid://c8b7bhb2hd6tw" path="res://game-package/Player_Ship_Sprite.png" id="2_a5chr"]
[ext_resource type="Script" path="res://Script/Player.gd" id="2_ges6q"]
[ext_resource type="Texture2D" uid="uid://ota8dom1ik03" path="res://game-package/BG1.png" id="3_jy202"]
[ext_resource type="Texture2D" uid="uid://dy0t5no5a82ga" path="res://game-package/enemy_sprites.png" id="4_dj2mw"]
[ext_resource type="Script" path="res://Script/Lives.gd" id="6_64k53"]
[ext_resource type="Script" path="res://Script/score.gd" id="7_j7cvt"]
[ext_resource type="Script" path="res://Script/play_again.gd" id="8_n1n5t"]
[ext_resource type="Script" path="res://Script/latest_score.gd" id="9_87kb0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c0b8c"]
radius = 6.5

[node name="World" type="Node2D"]
script = ExtResource("1_ejpar")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
z_index = 3
position = Vector2(160, 50)
script = ExtResource("2_ges6q")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_a5chr")
hframes = 2
vframes = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(0, -6, -2, -4, -2, 0, -7, 3, -7, 6, 7, 6, 7, 3, 2, 0, 2, -4)

[node name="BG" type="Sprite2D" parent="."]
z_index = -5
position = Vector2(160, 90)
scale = Vector2(0.26, 0.26)
texture = ExtResource("3_jy202")

[node name="Earth" type="StaticBody2D" parent="." groups=["earth"]]
position = Vector2(160, 90)
scale = Vector2(2, 2)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Earth"]
texture = ExtResource("4_dj2mw")
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Earth"]
shape = SubResource("CircleShape2D_c0b8c")

[node name="Lives" type="Node2D" parent="."]
script = ExtResource("6_64k53")

[node name="Life1" type="Sprite2D" parent="Lives"]
position = Vector2(16, 16)
texture = ExtResource("4_dj2mw")
vframes = 10
frame = 8

[node name="Life2" type="Sprite2D" parent="Lives"]
position = Vector2(40, 16)
texture = ExtResource("4_dj2mw")
vframes = 10
frame = 8

[node name="Life3" type="Sprite2D" parent="Lives"]
position = Vector2(64, 16)
texture = ExtResource("4_dj2mw")
vframes = 10
frame = 8

[node name="score" type="Label" parent="."]
offset_left = 229.0
offset_top = 4.0
offset_right = 281.0
offset_bottom = 30.0
text = "Score :"
script = ExtResource("7_j7cvt")

[node name="play_again" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 38.0
offset_top = 70.0
offset_right = 285.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 20
text = "Press space to play again!"
script = ExtResource("8_n1n5t")

[node name="latest_score" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 104.0
offset_top = 105.0
offset_right = 230.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 12
text = "your last score : "
script = ExtResource("9_87kb0")
